# SpaceHoPHelper14

./: .gitignore  .taurignore  Cargo.toml  README.md  build.rs  index.html  tauri.conf.json
.github/workflows/: pages.yml  pre-release.yml  release.yml
assets/profiles/: corvax.json  corvax.yaml
css/: editor.css  noto.css  style.css
js/: editor.js  elements.js  main.js  profiles.js  settings.js  ss14-bbcode-format.js  state.js  utils.js
profiles/: AltColors.yaml  TrueColors.yaml  corvax.yaml  profiles.txt
scripts/: create_latest.ps1  extract_templates.py  prepare_artifacts.ps1  web.ps1
src/: commands.rs  main.rs  profile.rs  view.rs
view/: index.html  package.json  profiles.js  redesigned-script.js  script.js  style.css  updates.js  utils.js  vite.config.js
view/scripts/: editor.js  elements.js  main.js  profiles.js  script.js  settings.js  state.js  updates.js  utils.js
