[package]
name = "spacehophelper14"
version = "0.3.2"
edition = "2021"
publish = false
repository = "https://github.com/Ertanic/SpaceHoPHelper14/"

[[bin]]
name = "SpaceHoPHelper14"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = [ "fs-read-file", "path-all", "updater", "clipboard-write-text", "shell-open"] }

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
