[package]
name = "spacehophelper14"
version = "1.2.2"
edition = "2021"
publish = false
repository = "https://github.com/Ertanic/SpaceHoPHelper14/"

[[bin]]
name = "SpaceHoPHelper14"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = [ "fs-read-dir", "fs-read-file", "path-all", "updater", "clipboard-write-text", "shell-open"] }
tokio = { version = "1.38.0", features = ["fs"] }
serde_yaml = "0.9.34"
log = "0.4.21"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "1.0.61"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
